# sail-game

./: .gitignore  CMakeLists.txt  Camera.h  FileUtils.cpp  Line.cpp  Line.h  Makefile  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Player.cpp  PlayerInputComponent.h  PointForce.cpp  PointForce.h  README.md  RigidObject.cpp  RigidObject.h  RigidObjectGraphicsComponent.cpp  RigidObjectPhysicsComponent.cpp  RigidObjectPhysicsComponent.h  ShaderMisc.cpp  ShaderMisc.h  SkyParameters.h  SkyboxObjectGraphicsComponent.cpp  SkyboxObjectGraphicsComponent.h  TestObject.cpp  Triangle.cpp  Triangle.h  UBOManager.cpp  UBOManager.h  VertexElementGraphicsComponent.h  WaterSurface.cpp  WaterSurface.h  WaterSurfaceGraphicsComponent.cpp  WaterSurfacePhysicsComponent.cpp  WaterSurfacePhysicsComponent.h  WindowParameters.cpp  World.cpp  box1.txt  (+7 more)
glsl/: bigBlock.glsl  buoyantFrag.glsl  managerVert.glsl  shaderUtils.glsl  skyboxFrag.glsl  waterFrag.glsl  waterGeom.glsl  waterVert.glsl
include/: Drag.h  InitWorld.h  Object.h  ObjectPainter.h  PaintableObject.h  Painter.h  RigidBody.h  RigidObject.h  RigidObjectGraphicsComponent.h  SkyboxObject.h  SkyboxObjectGraphicsComponent.h  SkyboxPainter.h  TestObject.h  Triangle.h  TypeSize.h  WaterSurface.h  WaterSurfaceGraphicsComponent.h  WindowParameters.h  World.h
modelfiles/: box2.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  FileUtils.cpp  FileUtils.h  InitWorld.cpp  Mesh.cpp  Mesh.h  Player.h  PlayerInputComponent.cpp  RigidBody.cpp  RigidObject.cpp  SkyParameters.cpp  SkyboxObject.cpp  SkyboxObjectGraphicsComponent.cpp  SkyboxPainter.cpp  Triangle.cpp  TypeSize.cpp  UBOManager.cpp  VertexElementGraphicsComponent.cpp  WaterSurface.cpp  WaterSurfacePhysicsComponent.cpp  World.cpp  main.cpp
src/glsl/: buoyantVert.glsl  waterFrag.glsl
src/modelfiles/: skybox.txt
